...
    <!--Rótulo para nueva información sobre la resolución.-->
    <TextView
        android:id="@+id/incid_resolucion_avance_rot"
        style="@style/textBase.textFieldLabel1"
        android:text="@string/incid_resolucion_avance_rot"/>
    <EditText
        android:id="@+id/incid_resolucion_avance_ed"
        style="@style/textBase.editField.description"
        android:hint="@string/incid_resolucion_avance_hint"
        />

    <!--Botones para confirmar cambios o cerrar la incidencia-->
    <LinearLayout
        style="@style/baseLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/incid_resolucion_fr_modif_button"
            style="@style/textBase.acButton1"
            android:text="@string/incid_resolucion_modif_button_rot"/>
        <Button
            android:id="@+id/incid_resolucion_edit_fr_close_button"
            style="@style/textBase.acButton1"
            android:text="@string/incid_resolucion_close_button_rot"/>
    </LinearLayout>

    <include layout="@layout/incid_resolucion_edit_see_include"/>
</LinearLayout>
...
